# MioCodec

./: .gitignore  README.md  pyproject.toml
config/model/: 25hz_miocodec.yaml  25hz_wave.yaml  25hz_wave_44khz.yaml
licenses/: AliasingFreeNeuralAudioSynthesis.LICENSE
src/miocodec/: __init__.py  model.py  pipeline.py  util.py
src/miocodec/module/: fsq.py  istft_head.py  transformer.py
src/miocodec/pupu/: config.py
src/miocodec/pupu/assets/config/: afgen.json  base.json
src/miocodec/pupu/assets/egs/: exp_config_pupuvocoder_base.json
src/miocodec/pupu/assets/egs/pupuvocoder/: exp_config_pupuvocoder.json
src/miocodec/pupu/models/vocoders/gan/generator/: pupuvocoder.py
src/miocodec/pupu/modules/activation_functions/: __init__.py  snake.py
src/miocodec/pupu/modules/anti_aliasing/: filter.py  resample.py
src/miocodec/pupu/modules/neural_source_filter/: sine_excitation.py
src/miocodec/pupu/modules/vocoder_blocks/: gan_utils.py  norm2d.py
